[package]
name = "replex"
version = "0.1.0"
edition = "2021"

[dependencies]
#http = "0.2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "=1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.25.0", features = ["full", "tracing"] }
lazy_static = "1.4.0"
anyhow = "1.0.69"
yaserde_derive = "0.8.0"
yaserde = "0.8.0"
derive_more = "0.99.17"
url = "2.3.1"
tracing = "0.1.37"
strum_macros = "0.24.3"
strum = "0.24.1"
itertools = "0.10.5"
pathetic = "0.3.0"
bytes = "1.4.0"
mime = "0.3.16"
async-trait = "0.1"
futures-util = "0.3.26"
opentelemetry = { version = "0.19.0", features = [ "trace", "rt-tokio" ] }
opentelemetry-otlp = { version = "0.12.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features=["registry", "env-filter"] } 
serde-aux = "^4.2.0"
serde_with = { version = "3.0", features = ["json"] }
futures = "0.3.28"
figment = { version = "0.10.10", features = ["env"] }
#salvo = { version = "0.50.2", features = ["websocket", "proxy", "cors", "acme", "cache", "otel", "compression", "affix"] }
salvo = { git = "https://github.com/salvo-rs/salvo", branch = "proxy", features = ["websocket", "proxy", "cors", "acme", "cache", "otel", "compression", "concurrency-limiter", "affix"] }
reqwest = { version = "0.11", features = ["gzip", "json"] }
http-body-util = "0.1.0-rc.3"
once_cell = "1.18.0"
moka = { version = "0.11.2", features = ["future"] }
tonic = {version = "0.8.0", features = ["tls", "tls-roots"]}
async-recursion = "1.0.4"
console-subscriber = "0.1.10"
tmdb-api = "0.5.0"
bincode = "1.3.3"
mime_guess = "2.0.4"
regex = "1.9.3"

[dev-dependencies]
async-std = { version = "^1.12", features = ["attributes"] }
axum-test-helper = "0.3.0"
httpmock = "0.6.7"
jsonxf = "1.1.1"
pretty_assertions = "1.3.0"
rstest = "0.18.1"
#replex = { path = ".", features = ["test"] }

#[features]
#test = []

#[replace]
#"salvo-proxy:0.50.2" = { path = "../salvo/crates/proxy" }

[profile.release]
debug = true
