[package]
name = "replex"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.1", features = ["full"] }
tokio = { version = "1.38.0", features = ["full", "tracing"] }
lazy_static = "1.4"
anyhow = "1.0"
yaserde_derive = "0.10"
yaserde = "0.10"
derive_more = "0.99"
url = "2.4.0"
tracing = "0.1"
strum_macros = "0.24"
strum = "0.24"
itertools = "0.10"
pathetic = "0.3"
bytes = "1.4"
mime = "0.3"
async-trait = "0.1"
futures-util = "0.3"
opentelemetry = { version = "0.19.0", features = [ "trace", "rt-tokio" ] }
opentelemetry-otlp = { version = "0.12.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features=["registry", "env-filter"] } 
serde-aux = "4.5.0"
serde_with = { version = "3.8.1", features = ["json"] }
futures = "0.3.28"
figment = { version = "0.10.10", features = ["env"] }
salvo = { version = "0.68", features = ["anyhow", "websocket", "proxy", "cors", "acme", "cache", "otel", "compression", "concurrency-limiter", "affix"] }
#salvo = { git = "https://github.com/salvo-rs/salvo.git", features = ["anyhow", "websocket", "proxy", "cors", "acme", "cache", "otel", "compression", "concurrency-limiter", "affix"] }
#salvo = { git = "https://github.com/salvo-rs/salvo", branch = "proxy", features = ["websocket", "proxy", "cors", "acme", "cache", "otel", "compression", "concurrency-limiter", "affix"] }
reqwest = { version = "0.12", features = ["gzip", "json", "blocking"] }
http-body-util = "0.1.2"
once_cell = "1.18.0"
moka = { version = "0.12", features = ["future"] }
#tonic = {version = "0.8.0", features = ["tls", "tls-roots"]}
async-recursion = "1.0.4"
console-subscriber = "0.1.10"
tmdb-api = "0.5.3"
bincode = "1.3.3"
mime_guess = "2.0.4"
regex = "1.9.3"
http = "1.1"
xml-rs = "0.8.16"
openssl = { version = "0.10", features = ["vendored"] }
multimap = "0.10.0"
rhai = { version = "1.15.1", features = ["serde"] }
serde_path_to_error = "0.1.14"
uncased = "0.9.9"
data-encoding = "2.4.0"
reqwest-retry = "0.6"
reqwest-middleware = "0.3"
memory-stats = "1.2.0"
graphql_client = { version = "0.14", features = ["reqwest"] }
#format_serde_error = "0.3"

[dev-dependencies]
async-std = { version = "^1.12", features = ["attributes"] }
axum-test-helper = "0.3.0"
httpmock = "0.6.7"
jsonxf = "1.1.1"
pretty_assertions = "1.3.0"
rstest = "0.18.1"
#memory-stats = "1.2.0"
#replex = { path = ".", features = ["test"] }

#[features]
#test = []

# [patch.crates-io]
# salvo-proxy = { path = "../salvo/crates/proxy" }
# salvo_core = { path = "../salvo/crates/core" }
#salvo-cache = { path = "../salvo/crates/cache" }

[profile.release]
debug = false
